[gd_scene load_steps=8 format=3 uid="uid://dg7kaibc4u4kj"]

[ext_resource type="PackedScene" uid="uid://bb4jbbxf3h2ql" path="res://Scenes/LevelScenes/level_display.tscn" id="1_ac4e0"]
[ext_resource type="Script" path="res://Scenes/LevelScenes/level_player.gd" id="1_tjmos"]
[ext_resource type="PackedScene" uid="uid://cccvuli1p3mka" path="res://Scenes/LevelScenes/LvPlySpMn/level_player_super_menu.tscn" id="2_58mln"]
[ext_resource type="PackedScene" uid="uid://l0e85mf5or8e" path="res://Scenes/util/OnscreenController/onscreen_controller.tscn" id="3_5klic"]
[ext_resource type="Script" path="res://Scripts/util/screen_adjusted.gd" id="3_qjyhk"]
[ext_resource type="Script" path="res://Scenes/LevelScenes/Buttons/SkipButton.gd" id="4_wj7s4"]
[ext_resource type="Script" path="res://Scenes/LevelScenes/TestTimer.gd" id="5_i8yqm"]

[node name="LevelPlayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tjmos")

[node name="LPMControl" type="Control" parent="."]
layout_mode = 1
anchor_right = 0.219
anchor_bottom = 1.0
offset_right = -0.400024

[node name="LeftPlayMenu" parent="LPMControl" instance=ExtResource("2_58mln")]
layout_mode = 1
anchor_left = 0.102857
anchor_top = 0.166667
anchor_right = 0.96
anchor_bottom = 0.611111
offset_right = 0.0
offset_bottom = 0.0
metadata/_edit_use_anchors_ = true

[node name="LevelDataDisplay" type="RichTextLabel" parent="LPMControl"]
layout_mode = 0
anchor_left = 0.131429
anchor_top = 0.0422222
anchor_right = 0.942857
anchor_bottom = 0.148889
bbcode_enabled = true
text = "[center]Level Name Here"
metadata/_edit_use_anchors_ = true

[node name="LevelDisplay" parent="." instance=ExtResource("1_ac4e0")]
layout_mode = 1
anchor_left = 0.219
anchor_right = 0.768
anchor_bottom = 1.0
offset_left = -0.400024
offset_right = 21.2
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.975975, 1)

[node name="Out Of Moves" type="ColorRect" parent="LevelDisplay"]
self_modulate = Color(1, 0, 0, 0.270588)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="LevelDisplay/Out Of Moves"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.212222
anchor_top = 0.315556
anchor_right = 0.778889
anchor_bottom = 0.657778
color = Color(0.211765, 0.243137, 0.321569, 1)
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="LevelDisplay/Out Of Moves/ColorRect2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.429
offset_right = -8.0
offset_bottom = -0.132004
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]
StackOverflowError"

[node name="Undo2" type="Button" parent="LevelDisplay/Out Of Moves/ColorRect2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0588235
anchor_top = 0.519481
anchor_right = 0.45098
anchor_bottom = 0.844156
text = "Undo"
metadata/_edit_use_anchors_ = true

[node name="Reset2" type="Button" parent="LevelDisplay/Out Of Moves/ColorRect2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.54902
anchor_top = 0.519481
anchor_right = 0.941176
anchor_bottom = 0.844156
text = "Reset"
metadata/_edit_use_anchors_ = true

[node name="Complete" type="ColorRect" parent="LevelDisplay"]
self_modulate = Color(0, 1, 0, 0.270588)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="LevelDisplay/Complete"]
layout_mode = 0
offset_left = 191.0
offset_top = 284.0
offset_right = 701.0
offset_bottom = 592.0
color = Color(0.211765, 0.243137, 0.321569, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="LevelDisplay/Complete/ColorRect2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.429
offset_bottom = -0.132004
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]
Loading complete"

[node name="Continue2" type="Button" parent="LevelDisplay/Complete/ColorRect2"]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.38649
anchor_top = 0.0584084
anchor_right = -0.386491
anchor_bottom = 0.258408
offset_left = 757.111
offset_top = 132.01
offset_right = 647.111
offset_bottom = 170.41
text = "Continue
"
metadata/_edit_use_anchors_ = true

[node name="RightPlayMenu" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.774
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.599976
offset_right = -36.0
offset_bottom = -91.0
grow_horizontal = 0
scale = Vector2(1.11222, 1.11222)

[node name="Undo" type="Button" parent="RightPlayMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0243326
anchor_top = 0.0180467
anchor_right = 0.947333
anchor_bottom = 0.155441
offset_left = 0.183846
offset_top = 11.4742
offset_right = 0.208862
offset_bottom = 0.322426
text = "Undo"
metadata/_edit_use_anchors_ = true

[node name="Reset" type="Button" parent="RightPlayMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00829941
anchor_top = 0.190045
anchor_right = 0.931376
anchor_bottom = 0.313655
offset_bottom = -1.52588e-05
text = "Reset"
metadata/_edit_use_anchors_ = true

[node name="EditButton3" type="Button" parent="RightPlayMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0138324
anchor_top = 0.35564
anchor_right = 0.936909
anchor_bottom = 0.481475
disabled = true
text = "Edit"
metadata/_edit_use_anchors_ = true

[node name="Skip" type="Button" parent="RightPlayMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0193653
anchor_top = 0.511232
anchor_right = 0.942442
anchor_bottom = 0.637067
disabled = true
text = "Skip"
script = ExtResource("4_wj7s4")
metadata/_edit_use_anchors_ = true

[node name="Continue" type="Button" parent="RightPlayMenu"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0138324
anchor_top = 0.664602
anchor_right = 0.936909
anchor_bottom = 0.788211
disabled = true
text = "Continue
"
metadata/_edit_use_anchors_ = true

[node name="Moves" type="RichTextLabel" parent="RightPlayMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.018
anchor_top = 0.839
anchor_right = 0.92
anchor_bottom = 0.953
offset_left = -4.85
offset_top = 0.248962
offset_bottom = 0.0229492
bbcode_enabled = true
text = "[center]Moves remaining:
20"

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.615556
anchor_right = 0.209932
anchor_bottom = 0.997418
offset_right = -33.8904
offset_bottom = -34.676
grow_vertical = 0
scale = Vector2(1.11222, 1.11222)
metadata/_edit_use_anchors_ = true

[node name="Control2" type="Control" parent="Control"]
layout_mode = 1
anchor_left = 0.921
anchor_top = 0.110569
anchor_right = 0.921
anchor_bottom = 0.111
offset_left = -278.142
offset_right = -28.142
offset_bottom = 249.867
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.11222, 1.11222)
script = ExtResource("3_qjyhk")
metadata/_edit_use_anchors_ = true

[node name="Controller" parent="Control/Control2" instance=ExtResource("3_5klic")]
layout_mode = 1
anchor_left = 0.2
anchor_right = 1.0
anchor_bottom = 0.8
offset_bottom = 0.0

[node name="Timer" type="Timer" parent="."]
script = ExtResource("5_i8yqm")

[connection signal="intsig" from="LPMControl/LeftPlayMenu" to="." method="menu_command"]
[connection signal="stoppedMoving" from="LevelDisplay" to="." method="finalize_step"]
[connection signal="pressed" from="LevelDisplay/Out Of Moves/ColorRect2/Undo2" to="." method="undo"]
[connection signal="pressed" from="LevelDisplay/Out Of Moves/ColorRect2/Reset2" to="." method="reset"]
[connection signal="pressed" from="LevelDisplay/Complete/ColorRect2/Continue2" to="." method="next_level"]
[connection signal="pressed" from="RightPlayMenu/Undo" to="." method="undo"]
[connection signal="pressed" from="RightPlayMenu/Reset" to="." method="reset"]
[connection signal="pressed" from="RightPlayMenu/Skip" to="." method="skip"]
[connection signal="pressed" from="RightPlayMenu/Continue" to="." method="next_level"]
[connection signal="ControlSignal" from="Control/Control2/Controller" to="." method="accept_input"]
